@@ -62,6 +62,12 @@ table.clients th { text-align: left; font-size: 0.9em; font-weight: bold; paddin
 table.clients tr:hover {background-color:#f5f5f5;}
 table.clients td    { padding: 5px; font-size: 0.9em; vertical-align: middle;}
 
+ul.tabs { padding:0; display: block; font-size:0.8em; position:relative; top:2px;}
+ul.tabs li { display:block; float:left; background:#ccc; padding:7px 10px;
+			 border-left:1px solid #ccc; border-top:1px solid #ccc; border-right:1px solid #ccc	;}
+ul.tabs li:hover { cursor: pointer; color:#fff; background: #888;}
+ul.tabs li.active { cursor:default; background:#fff; color:#000;}
+div.panes { width:100%; height:400px; border: 1px solid #ccc; padding:10px; clear:both;}
 .occupied_options { display: none;}
 .clientoptions { font-family: "Consolas", Courier, monospace; font-size: 14px; font-weight: bold;}
 .clientoptions td { text-align: right; }
