@@ -1,181 +1,189 @@
-h3 Åpningstider
-- hours = OpeningHours.find level.options_self_or_inherited['opening_hours']['id']
-div class="divdot inputf"
-  form id="change_hours_form" autocomplete="off"
-    input[id="level_id" hidden value="#{level.id}"]
-    input[id="level_type" hidden value="#{level.class.name}"]
-    input[id="opening_hours_id" hidden value="#{hours.id}"]
-    table class="genform"
-      tr
-        td[colspan="6"]
-        - if hours.options.owner_options_type == level.class.name
-          span[class="inherited" style="display:none" ] Disse innstillingene er arvet:
-        - else
-          span[class="inherited" ] Disse innstillingene er arvet:
-      tr
-        td
-        td fra
-        td til
-        td stengt?
-        td
-        td fra
-        td til
-        td stengt?
-      tr
-        td mandag
-        - if hours.monday_closed
-            td: input[type="text" id="monday_opens" class="hour required" disabled value="#{hours.monday_opens}"] -
-            td: input[type="text"  id="monday_closes" class="hour required" disabled value="#{hours.monday_closes}"]
-            td: input[type="checkbox" class="chk" id="monday_closed" checked]
-        - else
-            td: input[type="text" id="monday_opens" class="hour required" value="#{hours.monday_opens}"] -
-            td: input[type="text"  id="monday_closes" class="hour required"  value="#{hours.monday_closes}"]
-            td: input[type="checkbox" class="chk" id="monday_closed"]
-        td fredag
-        - if hours.friday_closed
-            td: input[type="text" id="friday_opens" class="hour required" disabled value="#{hours.friday_opens}"] -
-            td: input[type="text"  id="friday_closes" class="hour required" disabled value="#{hours.friday_closes}"]
-            td: input[type="checkbox" class="chk" id="friday_closed" checked]
-        - else
-            td: input[type="text" id="friday_opens" class="hour required" value="#{hours.friday_opens}"] -
-            td: input[type="text"  id="friday_closes" class="hour required"  value="#{hours.friday_closes}"]
-            td: input[type="checkbox" class="chk" id="friday_closed"]
-      tr
-        td tirsdag
-        - if hours.tuesday_closed
-            td: input[type="text" id="tuesday_opens" class="hour required" disabled value="#{hours.tuesday_opens}"] -
-            td: input[type="text"  id="tuesday_closes" class="hour required" disabled value="#{hours.tuesday_closes}"]
-            td: input[type="checkbox" class="chk" id="tuesday_closed" checked]
-        - else
-            td: input[type="text" id="tuesday_opens" class="hour required" value="#{hours.tuesday_opens}"] -
-            td: input[type="text"  id="tuesday_closes" class="hour required"  value="#{hours.tuesday_closes}"]
-            td: input[type="checkbox" class="chk" id="tuesday_closed"]
-        td lørdag
-        - if hours.saturday_closed
-            td: input[type="text" id="saturday_opens" class="hour required" disabled value="#{hours.saturday_opens}"] -
-            td: input[type="text"  id="saturday_closes" class="hour required" disabled value="#{hours.saturday_closes}"]
-            td: input[type="checkbox" class="chk" id="saturday_closed" checked]
-        - else
-            td: input[type="text" id="saturday_opens" class="hour required" value="#{hours.saturday_opens}"] -
-            td: input[type="text"  id="saturday_closes" class="hour required"  value="#{hours.saturday_closes}"]
-            td: input[type="checkbox" class="chk" id="saturday_closed"]
-      tr
-        td onsdag
-        - if hours.wednsday_closed
-            td: input[type="text" id="wednsday_opens" class="hour required" disabled value="#{hours.wednsday_opens}"] -
-            td: input[type="text"  id="wednsday_closes" class="hour required" disabled value="#{hours.wednsday_closes}"]
-            td: input[type="checkbox" class="chk" id="wednsday_closed" checked]
-        - else
-            td: input[type="text" id="wednsday_opens" class="hour required" value="#{hours.wednsday_opens}"] -
-            td: input[type="text"  id="wednsday_closes" class="hour required"  value="#{hours.wednsday_closes}"]
-            td: input[type="checkbox" class="chk" id="wednsday_closed"]
-        td søndag
-        - if hours.sunday_closed
-            td: input[type="text" id="sunday_opens" class="hour required" disabled value="#{hours.sunday_opens}"] -
-            td: input[type="text"  id="sunday_closes" class="hour required" disabled value="#{hours.sunday_closes}"]
-            td: input[type="checkbox" class="chk" id="sunday_closed" checked]
-        - else
-            td: input[type="text" id="sunday_opens" class="hour required" value="#{hours.sunday_opens}"] -
-            td: input[type="text"  id="sunday_closes" class="hour required" value="#{hours.sunday_closes}"]
-            td: input[type="checkbox" class="chk" id="sunday_closed"]
-      tr
-        td torsdag
-        - if hours.thursday_closed
-            td: input[type="text" id="thursday_opens" class="hour required" disabled value="#{hours.thursday_opens}"] -
-            td: input[type="text"  id="thursday_closes" class="hour required" disabled value="#{hours.thursday_closes}"]
-            td: input[type="checkbox" class="chk" id="thursday_closed" checked]
-        - else
-            td: input[type="text" id="thursday_opens" class="hour required" value="#{hours.thursday_opens}"] -
-            td: input[type="text"  id="thursday_closes" class="hour required"  value="#{hours.thursday_closes}"]
-            td: input[type="checkbox" class="chk" id="thursday_closed"]
-        td
-        td
-      tr
-        td[colspan="6"]&nbsp;
-      tr
-        td[colspan="2"] Brukerne logges av
-        td: input[type="text" class="nr" id="minutes_before_closing" value="#{hours.minutes_before_closing}"]
-        td[colspan="3"] minutter før stengetid
-    div[class="hoursbuttons"]=
-  button[type='button' id="hourssave" class="gen"]  = "Lagre"
-  button[type='button' id="hoursclear" class="gen"]  = "Blank ut skjema"
-  span[id="hours_info" class="info" style="margin-left:48px"]
-  span[id="hours_error" class="error" style="margin-left:48px"]
+ul class="tabs"
+  li[class="active"] Åpningstider
+  li Aldersbegrensninger
+  li Tidsbegrensninger
+  li Hjemmeside
+  li Printer
+div class="panes"
+  div class="pane"
+    h3 Åpningstider
+    - hours = OpeningHours.find level.options_self_or_inherited['opening_hours']['id']
+    div class="divdot inputf"
+      form id="change_hours_form" autocomplete="off"
+        input[id="level_id" hidden value="#{level.id}"]
+        input[id="level_type" hidden value="#{level.class.name}"]
+        input[id="opening_hours_id" hidden value="#{hours.id}"]
+        table class="genform"
+          tr
+            td[colspan="6"]
+            - if hours.options.owner_options_type == level.class.name
+              span[class="inherited" style="display:none" ] Disse innstillingene er arvet:
+            - else
+              span[class="inherited" ] Disse innstillingene er arvet:
+          tr
+            td
+            td fra
+            td til
+            td stengt?
+            td
+            td fra
+            td til
+            td stengt?
+          tr
+            td mandag
+            - if hours.monday_closed
+                td: input[type="text" id="monday_opens" class="hour required" disabled value="#{hours.monday_opens}"] -
+                td: input[type="text"  id="monday_closes" class="hour required" disabled value="#{hours.monday_closes}"]
+                td: input[type="checkbox" class="chk" id="monday_closed" checked]
+            - else
+                td: input[type="text" id="monday_opens" class="hour required" value="#{hours.monday_opens}"] -
+                td: input[type="text"  id="monday_closes" class="hour required"  value="#{hours.monday_closes}"]
+                td: input[type="checkbox" class="chk" id="monday_closed"]
+            td fredag
+            - if hours.friday_closed
+                td: input[type="text" id="friday_opens" class="hour required" disabled value="#{hours.friday_opens}"] -
+                td: input[type="text"  id="friday_closes" class="hour required" disabled value="#{hours.friday_closes}"]
+                td: input[type="checkbox" class="chk" id="friday_closed" checked]
+            - else
+                td: input[type="text" id="friday_opens" class="hour required" value="#{hours.friday_opens}"] -
+                td: input[type="text"  id="friday_closes" class="hour required"  value="#{hours.friday_closes}"]
+                td: input[type="checkbox" class="chk" id="friday_closed"]
+          tr
+            td tirsdag
+            - if hours.tuesday_closed
+                td: input[type="text" id="tuesday_opens" class="hour required" disabled value="#{hours.tuesday_opens}"] -
+                td: input[type="text"  id="tuesday_closes" class="hour required" disabled value="#{hours.tuesday_closes}"]
+                td: input[type="checkbox" class="chk" id="tuesday_closed" checked]
+            - else
+                td: input[type="text" id="tuesday_opens" class="hour required" value="#{hours.tuesday_opens}"] -
+                td: input[type="text"  id="tuesday_closes" class="hour required"  value="#{hours.tuesday_closes}"]
+                td: input[type="checkbox" class="chk" id="tuesday_closed"]
+            td lørdag
+            - if hours.saturday_closed
+                td: input[type="text" id="saturday_opens" class="hour required" disabled value="#{hours.saturday_opens}"] -
+                td: input[type="text"  id="saturday_closes" class="hour required" disabled value="#{hours.saturday_closes}"]
+                td: input[type="checkbox" class="chk" id="saturday_closed" checked]
+            - else
+                td: input[type="text" id="saturday_opens" class="hour required" value="#{hours.saturday_opens}"] -
+                td: input[type="text"  id="saturday_closes" class="hour required"  value="#{hours.saturday_closes}"]
+                td: input[type="checkbox" class="chk" id="saturday_closed"]
+          tr
+            td onsdag
+            - if hours.wednsday_closed
+                td: input[type="text" id="wednsday_opens" class="hour required" disabled value="#{hours.wednsday_opens}"] -
+                td: input[type="text"  id="wednsday_closes" class="hour required" disabled value="#{hours.wednsday_closes}"]
+                td: input[type="checkbox" class="chk" id="wednsday_closed" checked]
+            - else
+                td: input[type="text" id="wednsday_opens" class="hour required" value="#{hours.wednsday_opens}"] -
+                td: input[type="text"  id="wednsday_closes" class="hour required"  value="#{hours.wednsday_closes}"]
+                td: input[type="checkbox" class="chk" id="wednsday_closed"]
+            td søndag
+            - if hours.sunday_closed
+                td: input[type="text" id="sunday_opens" class="hour required" disabled value="#{hours.sunday_opens}"] -
+                td: input[type="text"  id="sunday_closes" class="hour required" disabled value="#{hours.sunday_closes}"]
+                td: input[type="checkbox" class="chk" id="sunday_closed" checked]
+            - else
+                td: input[type="text" id="sunday_opens" class="hour required" value="#{hours.sunday_opens}"] -
+                td: input[type="text"  id="sunday_closes" class="hour required" value="#{hours.sunday_closes}"]
+                td: input[type="checkbox" class="chk" id="sunday_closed"]
+          tr
+            td torsdag
+            - if hours.thursday_closed
+                td: input[type="text" id="thursday_opens" class="hour required" disabled value="#{hours.thursday_opens}"] -
+                td: input[type="text"  id="thursday_closes" class="hour required" disabled value="#{hours.thursday_closes}"]
+                td: input[type="checkbox" class="chk" id="thursday_closed" checked]
+            - else
+                td: input[type="text" id="thursday_opens" class="hour required" value="#{hours.thursday_opens}"] -
+                td: input[type="text"  id="thursday_closes" class="hour required"  value="#{hours.thursday_closes}"]
+                td: input[type="checkbox" class="chk" id="thursday_closed"]
+            td
+            td
+          tr
+            td[colspan="6"]&nbsp;
+          tr
+            td[colspan="2"] Brukerne logges av
+            td: input[type="text" class="nr" id="minutes_before_closing" value="#{hours.minutes_before_closing}"]
+            td[colspan="3"] minutter før stengetid
+        div[class="hoursbuttons"]=
+      button[type='button' id="hourssave" class="gen"]  = "Lagre"
+      button[type='button' id="hoursclear" class="gen"]  = "Blank ut skjema"
+      span[id="hours_info" class="info" style="margin-left:48px"]
+      span[id="hours_error" class="error" style="margin-left:48px"]
+  div class="pane"
+    h3 Aldersbegrensninger
+    p Hvis det er ønskelig, kan klientene være forbeholdt brukere innenfor en gitt aldersgruppe. Angi nedre og øvre aldersgrense i år:
+    div class="divdot inputf"
+      span[class="inherited" id="age_inherited" style="margin:7px; #{'display:none' unless level.options.age_limit_lower.nil? }"]Disse innstillingene er arvet:
+      form id="age_limit_form" autocomplete="off"
+        table class="genform"
+          tr
+            td nedre aldergrense
+            td: input[type="text" id="age_lower" class="nr required" value="#{level.options_self_or_inherited['age_limit_lower']}"]
+            td øvre aldergrense
+            td: input[type="text" id="age_higher" class="nr required" value="#{level.options_self_or_inherited['age_limit_higher']}"]
+            td: button[type='button' id="agesave" ]  = "Lagre"
+            td
+              span[id="age_info" class="info" style="margin-left:48px"]
+              span[id="age_error" class="error" style="margin-left:48px"]
 
-h3 Aldersbegrensninger
-p Hvis det er ønskelig, kan klientene være forbeholdt brukere innenfor en gitt aldersgruppe. Angi nedre og øvre aldersgrense i år:
-div class="divdot inputf"
-  span[class="inherited" id="age_inherited" style="margin:7px; #{'display:none' unless level.options.age_limit_lower.nil? }"]Disse innstillingene er arvet:
-  form id="age_limit_form" autocomplete="off"
-    table class="genform"
-      tr
-        td nedre aldergrense
-        td: input[type="text" id="age_lower" class="nr required" value="#{level.options_self_or_inherited['age_limit_lower']}"]
-        td øvre aldergrense
-        td: input[type="text" id="age_higher" class="nr required" value="#{level.options_self_or_inherited['age_limit_higher']}"]
-        td: button[type='button' id="agesave" ]  = "Lagre"
-        td
-          span[id="age_info" class="info" style="margin-left:48px"]
-          span[id="age_error" class="error" style="margin-left:48px"]
-
-
-h3 Tidsbegrensninger
-p Angi tidsbegrensinger per bruker per dag
-/, eller tillat fri bruk:
-div class="divdot inputf"
-  - if level.options.time_limit or level.options.time_limit_no_limit
-    span[class="inherited" id="time_inherited" style="margin:7px; display:none;"]Disse innstillingene er arvet:
-  - else
-    span[class="inherited" id="time_inherited" style="margin:7px"]Disse innstillingene er arvet:
-  table class="genform"
-    tr
-      td minutter per dag
-      td: input[type="text" id="time_limit" class="nr" value="#{level.options_self_or_inherited['time_limit']}"]
-      td
-      /fri bruk?
-      - if level.options_self_or_inherited['time_limit_no_limit']
-        td[class="invisible"]: input[type="checkbox" id="time_limit_no_limit" checked="checked"]
+  div class="pane"
+    h3 Tidsbegrensninger
+    p Angi tidsbegrensinger per bruker per dag
+    /, eller tillat fri bruk:
+    div class="divdot inputf"
+      - if level.options.time_limit or level.options.time_limit_no_limit
+        span[class="inherited" id="time_inherited" style="margin:7px; display:none;"]Disse innstillingene er arvet:
       - else
-        td[class="invisible"]: input[type="checkbox" id="time_limit_no_limit"]
-      td: button[type='button' id="time_save"]  = "Lagre"
-      td
-        span[id="time_info" class="info" style="margin-left:48px"]
-        span[id="time_error" class="error" style="margin-left:48px"]
+        span[class="inherited" id="time_inherited" style="margin:7px"]Disse innstillingene er arvet:
+      table class="genform"
+        tr
+          td minutter per dag
+          td: input[type="text" id="time_limit" class="nr" value="#{level.options_self_or_inherited['time_limit']}"]
+          td
+          /fri bruk?
+          - if level.options_self_or_inherited['time_limit_no_limit']
+            td[class="invisible"]: input[type="checkbox" id="time_limit_no_limit" checked="checked"]
+          - else
+            td[class="invisible"]: input[type="checkbox" id="time_limit_no_limit"]
+          td: button[type='button' id="time_save"]  = "Lagre"
+          td
+            span[id="time_info" class="info" style="margin-left:48px"]
+            span[id="time_error" class="error" style="margin-left:48px"]
 
-p Angi lengde på sesjoner på korttidsmaskiner:
-div class="divdot inputf"
-  span[class="inherited" id="shorttime_inherited" style="margin:7px; #{'display:none' unless level.options.shorttime_limit.nil? }"]Disse innstillingene er arvet:
-  table class="genform"
-    tr
-      td minutter per sesjon
-      td: input[type="text" id="shorttime_limit" class="nr" value="#{level.options_self_or_inherited['shorttime_limit']}"]
-      td: button[type='button' id="shorttime_save"]  = "Lagre"
-      td
-        span[id="shorttime_info" class="info" style="margin-left:48px"]
-        span[id="shorttime_error" class="error" style="margin-left:48px"]
+    p Angi lengde på sesjoner på korttidsmaskiner:
+    div class="divdot inputf"
+      span[class="inherited" id="shorttime_inherited" style="margin:7px; #{'display:none' unless level.options.shorttime_limit.nil? }"]Disse innstillingene er arvet:
+      table class="genform"
+        tr
+          td minutter per sesjon
+          td: input[type="text" id="shorttime_limit" class="nr" value="#{level.options_self_or_inherited['shorttime_limit']}"]
+          td: button[type='button' id="shorttime_save"]  = "Lagre"
+          td
+            span[id="shorttime_info" class="info" style="margin-left:48px"]
+            span[id="shorttime_error" class="error" style="margin-left:48px"]
+  div class="pane"
+    h3 Hjemmeside
+    p Startside til klientens nettleser.
+    div class="divdot inputf"
+      span[class="inherited" id="homepage_inherited" style="margin:7px; #{'display:none' unless level.options.homepage.nil? }"]Disse innstillingene er arvet:
+      table class="genform"
+        tr
+          td hjemmeside
+          td: input[type="text" id="homepage" value="#{level.options_self_or_inherited['homepage']}"]
+          td: button[type='button' id="homepagesave"]  = "Lagre"
+          td
+            span[id="homepage_info" class="info" style="margin-left:48px"]
+            span[id="homepage_error" class="error" style="margin-left:48px"]
+  div class="pane"
+    h3 Printer
+    div class="divdot inputf"
+      table class="genform"
+        tr
+          td printeradresse
+          td: input[type="text" id="printer" value="#{level.options_self_or_inherited['printeraddr']}"]
+          td: button[type='button' id="printersave"]  = "Lagre"
+          td
+            span[id="printer_info" class="info" style="margin-left:48px"]
+            span[id="printer_error" class="error" style="margin-left:48px"]
 
-h3 Hjemmeside
-p Startside til klientens nettleser.
-div class="divdot inputf"
-  span[class="inherited" id="homepage_inherited" style="margin:7px; #{'display:none' unless level.options.homepage.nil? }"]Disse innstillingene er arvet:
-  table class="genform"
-    tr
-      td hjemmeside
-      td: input[type="text" id="homepage" value="#{level.options_self_or_inherited['homepage']}"]
-      td: button[type='button' id="homepagesave"]  = "Lagre"
-      td
-        span[id="homepage_info" class="info" style="margin-left:48px"]
-        span[id="homepage_error" class="error" style="margin-left:48px"]
-
-h3 Printer
-div class="divdot inputf"
-  table class="genform"
-    tr
-      td printeradresse
-      td: input[type="text" id="printer" value="#{level.options_self_or_inherited['printeraddr']}"]
-      td: button[type='button' id="printersave"]  = "Lagre"
-      td
-        span[id="printer_info" class="info" style="margin-left:48px"]
-        span[id="printer_error" class="error" style="margin-left:48px"]
-
-script src="/js/options.js"
+    script src="/js/options.js"
